# InterfejsyProjekt

./: CMakeLists.txt  Dokumentacja Projektu – Rzutowanie Brył.docx  InterfejsyProjekt.sln  flake.nix  main.py  requirements.txt
include/: AngleDial.h  AppWindow.h  MainWindow.hpp  Model.h  Model.hpp  ProjectionMode.hpp  ProjectionPane.h  TransformationSlider.h  main.h
include/docks/: ProjectionDock.hpp  TransformationDock.hpp
include/widgets/: ProjectionCanvas.hpp  RotationDial.hpp  RotationDials.hpp  TransformationSlider.hpp  TransformationSliders.hpp  Vector3Edit.hpp  Vector3EditBase.hpp
models/: szescian.geo
src/: AngleDial.cpp  AppWindow.cpp  MainWindow.cpp  Model.cpp  ProjectionMode.cpp  ProjectionPane.cpp  TransformationSlider.cpp  main.cpp
src/docks/: ProjectionDock.cpp  TransformationDock.cpp
src/widgets/: ProjectionCanvas.cpp  RotationDial.cpp  TransformationSlider.cpp
wxWidgets/: GUIMyFrame1.cpp  GUIMyFrame1.h  readme.txt  vecmat.cpp  vecmat.h  wxFB.fbp  wxWidgets.vcxproj  wxWidgets.vcxproj.filters  wxWidgets_TemporaryKey.pfx
wxWidgets/x64/Debug/: InterfejsyProjekt.exe.recipe  InterfejsyProjekt.ilk  vc143.idb  wxWidgets.exe.recipe  wxWidgets.ilk  wxWidgets.vcxproj.FileListAbsolute.txt  wxWidgets.vcxproj.cppwinrt_comp.rsp
wxWidgets/x64/Debug/Interfej.9b75dce8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  InterfejsyProjekt.lastbuildstate  (+5 more)
wxWidgets/x64/Release/: wxWidgets.exe.recipe  wxWidgets.iobj  wxWidgets.ipdb  wxWidgets.vcxproj.FileListAbsolute.txt  wxWidgets.vcxproj.cppwinrt_comp.rsp  wxWidgets.vcxproj.mdmerge.rsp
(+20 files in other folders)
